--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="LOGIN.css">
-    <title>Document</title>
+    <title>LOGIN1</title>
 </head>
 <body>
     <div class="main">
